switch to Arrays.asList
- haven't switched to JDK9 yet